<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/pdvlogo" />



                <EditText
                    android:id="@+id/edtHost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@android:color/darker_gray"
                    android:drawableStart="@drawable/subdominio"
                    android:gravity="center"
                    android:ems="10"
                    android:hint="@string/host"
                    android:textColor="#000000"
                    android:inputType="textPersonName"
                    android:paddingStart="5dp" />



                <EditText
                    android:id="@+id/edtEmpresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@android:color/darker_gray"
                    android:drawableStart="@drawable/subdominio"
                    android:gravity="center"
                    android:ems="10"
                    android:hint="@string/subdominio"
                    android:textColor="#000000"
                    android:inputType="textPersonName"
                    android:paddingStart="5dp" />

                <EditText
                    android:id="@+id/edtUuid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="8dp"
                    android:background="#D5CFCF"
                    android:backgroundTint="#D5CBCB"
                    android:drawableStart="@drawable/uuid"
                    android:gravity="center"
                    android:editable="false"
                    android:textColor="#000000"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/uuid"
                    android:inputType="textPersonName"
                    android:paddingStart="5dp"
                    android:textIsSelectable="false" />

                <EditText
                    android:id="@+id/edtUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@android:color/darker_gray"
                    android:drawableStart="@drawable/usuario"
                    android:gravity="center"
                    android:ems="10"
                    android:textColor="#000000"
                    android:hint="@string/usuario"
                    android:inputType="textPersonName"
                    android:paddingStart="5dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="@android:color/darker_gray"
                        android:drawableStart="@drawable/password"
                        android:gravity="center"
                        android:ems="10"
                        android:hint="@string/password"
                        android:textColor="#000000"
                        android:inputType="textPassword"
                        android:paddingStart="5dp"/>
                </com.google.android.material.textfield.TextInputLayout>


                <RadioButton
                    android:id="@+id/RBSecion"
                    android:hint="@string/nocierre"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:background="#284F77"
                    android:text="@string/iniciar"
                    android:textColor="#FFF"
                    android:textSize="18sp" />

            </LinearLayout>
        </FrameLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>